--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'sidebar_content' %>
+
 <div class="container jumbotron">
   <p>This is the app to judge climbing competitions</p>
 </div>
