--- a/app/views/scores/_result.html.erb
+++ b/app/views/scores/_result.html.erb
@@ -4,7 +4,7 @@
       <td><%= result.place %></td>
       <td><%= result.competitor.name %> <%= result.competitor.surname %></td>
       <td><%= result.score %></td>
-      <td><%= result.start_number %></td>
+      <td><%= result.ex_points %></td>
       <% end %>
     </tr>
 </tbody>
