--- a/app/views/scores/_results.html.erb
+++ b/app/views/scores/_results.html.erb
@@ -7,7 +7,7 @@
           <th>Place: </th>
           <th>Name: </th>
           <th>Score: </th>
-          <th>Start number: </th>
+          <th>Points: </th>
         </tr>
       </thead>
       <%= render partial: 'scores/result', collection: results, as: :result %>
