--- a/app/views/scores/_scores.html.erb
+++ b/app/views/scores/_scores.html.erb
@@ -4,9 +4,9 @@
     <table class="table table-condensed table-hover">
       <thead>
         <tr>
-          <th class="col-sm-1">#</th>
-          <th class="col-sm-4">Name</th>
-          <th class="col-sm-1">Score</th>
+          <th class="col-md-1">#</th>
+          <th class="col-md-3">Name</th>
+          <th class="col-md-3">Score</th>
         </tr>
       </thead>
       <%= render partial: 'scores/score', collection: scores, as: :score %>
