--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'sidebar_content' %>
 
 <div class="container jumbotron">
+  <h1>Climbing Judge</h1>
   <p>This is the app to judge climbing competitions</p>
 </div>
