--- a/app/views/events/_event_results.html.erb
+++ b/app/views/events/_event_results.html.erb
@@ -4,9 +4,9 @@
     <table id="competitors" class="table table-condensed table-hover">
       <thead>
         <tr>
-          <th class="col-sm-1">Place</th>
-          <th class="col-sm-1">Name</th>
-          <th class="col-sm-1">Points</th>
+          <th>Place</th>
+          <th>Name</th>
+          <th>Points</th>
         </tr>
       </thead>
       <%= render partial: 'event_result', collection: event_results, as: :event_result %>
