--- a/app/views/competitors/show.html.erb
+++ b/app/views/competitors/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'sidebar_content' %>
 
-<div class="col-sm-6">
+<div class="col-md-12">
 <%= render partial: 'competitors/competitor_results', loclas: {results: @results, competitor: @competitor } %>
 </div>
