--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'sidebar_content' %>
 
-<div class="col-sm-6">
+<div class="col-md-12">
 <%= render partial: 'events', locals: {events: @events } %>
 </div>
