--- a/app/views/scores/_result.html.erb
+++ b/app/views/scores/_result.html.erb
@@ -2,7 +2,7 @@
     <tr>
       <% if result.score > 0 %>
       <td><%= result.place %></td>
-      <td><%= result.competitor.name %> <%= result.competitor.surname %></td>
+      <td><%= result.competitor.full_name %></td>
       <td><%= result.score %></td>
       <td><%= result.ex_points %></td>
       <% end %>
