--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,9 @@
       </div>
     <% end %>
     
+    <p class="bg-info">Please signup with your real email to get instructions on how to 
+      use this application.</p>
+    
     <div class="form-group">
       <%= f.label :email %><br />
       <%= f.text_field :email %>
