changes to welcome page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,11 @@
  ul.nav li.danger, ul.nav li.danger:hover { color: #ff0000; }
  ul.nav li.action, ul.nav li.action:hover { color: GreenYellow; }
  
+ .image {
+   float: left; 
+   padding: 20px;
+ }
+ 
  #m2, #f2 {
    display: none;
  }
