--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -19,7 +19,7 @@
     <p>
       If you want to check out this application, please write me an email,
       and i will give you admin permissions. I want to make this application 
-      better, so after playing, please leave a comment in comments section. 
+      better, so after playing, please send me email with your comments. 
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
