--- a/app/views/application/_sidebar_content.html.erb
+++ b/app/views/application/_sidebar_content.html.erb
@@ -4,12 +4,13 @@
     <% unless current_user.events.empty? %>
       <li class="list-group-item"><h4>Your events:</h4></li>
       <% current_user.events.sort_by { |e| e.updated_at }.reverse.each do |event| %>
-      <li class="list-group-item">
-        <div style="display:block;">
+      <li class="list-group-item">    
+        <div style="display: inline-block;">
           <%= link_to "#{event.name} (#{event.status})", event_path(event) %>
-          <div><%= link_to "Delete", event_path(event), method: :delete, 
-                  class: "btn btn-xs btn-danger", data: { confirm: "Are you sure?" } %></div>
-          </div>
+          <%= link_to "Delete", event_path(event), method: :delete, 
+                  class: "btn btn-xs btn-danger delete_button", data: { confirm: "Are you sure?" } %>
+        </div>
+          
         </li>
       <% end %>
     <% end %>
