change exceptions to if/else for event flow

--- a/app/views/competitors/_competitor.html.erb
+++ b/app/views/competitors/_competitor.html.erb
@@ -3,5 +3,6 @@
     <td><%= competitor.name %></td>
     <td><%= competitor.surname %></td>
     <td><%= competitor.club %></td>
+    <td><%= competitor.birth_date %></td>
   </tr>
 </tbody>
