--- a/app/views/competitors/_competitors.html.erb
+++ b/app/views/competitors/_competitors.html.erb
@@ -7,6 +7,7 @@
           <th>Firstname</th>
           <th>Lastname</th>
           <th>Club</th>
+          <th>Birthdate</th>
         </tr>
       </thead>
       <%= render partial: 'competitors/competitor', collection: competitors, as: :competitor %>
