--- a/app/views/eliminations/eliminations.html.erb
+++ b/app/views/eliminations/eliminations.html.erb
@@ -1,17 +1,17 @@
 <% content_for :sidebar do %>
-  <div id="compute_results">
+  <div id="scores_remaining">
     <li class="list-group-item"><h4>Eliminations</h4>
       (scores remaining: <%= scores_remaining([@m1, @f1, @m2, @f2]) %>)
     </li>
   </div>
   <div id="buttons">
-    <a href='#' id='m1-btn' class='list-group-item active'><%= @m1.name %></a>
     <a href='#' id='f1-btn' class='list-group-item active'><%= @f1.name %></a>
-    <a href='#' id='m2-btn' class='list-group-item'><%= @m2.name %></a>
+    <a href='#' id='m1-btn' class='list-group-item active'><%= @m1.name %></a>
     <a href='#' id='f2-btn' class='list-group-item'><%= @f2.name %></a>
+    <a href='#' id='m2-btn' class='list-group-item'><%= @m2.name %></a>
   </div>
   <li class="list-group-item"><h4>Starting Lists (PDF)</h4></li>
-  <% @event.eliminations_lists.each do |list| %>
+  <% @event.eliminations_lists.reverse.each do |list| %>
     <%= link_to "#{list.name}", list_path(list, format: "pdf"), class: 'list-group-item' %>
   <% end %>
   <li class="list-group-item danger"><h4>Danger</h4></li>
@@ -19,55 +19,53 @@
                 data: { confirm: "Are you sure?" } %>
 <% end %>
 
-<div class="tab-content">
-  <div class="row" id="m1">
-
-      <div id="m1_scores" class="col-md-6">
-        <%= render partial: 'scores/scores', locals: {scores: @m1.start_list, name: "Men's first route" } %>
-    </div>
-    
-      <div id="m1_res" class="col-md-6">
-        <%= render partial: 'scores/results', locals: {results: @m1.results, name: "Men's first route results" } %>
-      </div>
-
-  </div>
-
   <div class="row" id="f1">
     
       <div id="f1_scores" class="col-md-6">
-        <%= render partial: 'scores/scores', locals: { scores: @f1.start_list, name: "Women's first route" } %>
+        <%= render partial: 'scores/scores', locals: { scores: @f1.start_list, name: "#{@f1.name} scores" } %>
       </div>
     
-      <div id="f1_res" class="col-md-6">
-        <%= render partial: 'scores/results', locals: {results: @f1.results, name: "Women's first route results" } %>
+      <div id="first_route_women" class="col-md-6">
+        <%= render partial: 'scores/results', locals: {results: @f1.results, name: "#{@f1.name} results" } %>
       </div>
     
   </div>
+  
+  <div class="row" id="m1">
+
+      <div id="m1_scores" class="col-md-6">
+        <%= render partial: 'scores/scores', locals: {scores: @m1.start_list, name: "#{@m1.name} scores" } %>
+    </div>
+    
+      <div id="first_route_men" class="col-md-6">
+        <%= render partial: 'scores/results', locals: {results: @m1.results, name: "#{@m1.name} results" } %>
+      </div>
+
+  </div>
+  
+  <div class="row" id="f2">
+    
+      <div id="f2_scores" class="col-md-6">
+        <%= render partial: 'scores/scores', locals: { scores: @f2.start_list, name: "#{@f2.name} scores" } %>
+     </div>
+    
+      <div id="second_route_women" class="col-md-6">
+        <%= render partial: 'scores/results', locals: {results: @f2.results, name: "#{@f2.name} results" } %> 
+      </div>
+
+  </div> 
     
   <div class="row" id="m2">
     
       <div id="m2_scores" class="col-md-6">
-        <%= render partial: 'scores/scores', locals: { scores: @m2.start_list, name: "Men's second route" } %>
+        <%= render partial: 'scores/scores', locals: { scores: @m2.start_list, name: "#{@m2.name} scores" } %>
       </div>
     
-      <div id="m2_res" class="col-md-6">
-        <%= render partial: 'scores/results', locals: {results: @m2.results, name: "Men's second route results" } %>
+      <div id="second_route_men" class="col-md-6">
+        <%= render partial: 'scores/results', locals: {results: @m2.results, name: "#{@m2.name} results" } %>
       </div>
 
   </div>  
-
-  <div class="row" id="f2">
-    
-      <div id="f2_scores" class="col-md-6">
-        <%= render partial: 'scores/scores', locals: { scores: @f2.start_list, name: "Women's second route" } %>
-     </div>
-    
-      <div id="f2_res" class="col-md-6">
-        <%= render partial: 'scores/results', locals: {results: @f2.results, name: "Women's second route results" } %> 
-      </div>
-
-  </div> 
-</div> 
 
 <div class="row text-center">
   <%= link_to "Eliminations Results", compute_eliminations_results_event_path, 
