--- a/app/views/event_competitors/competitors.js.erb
+++ b/app/views/event_competitors/competitors.js.erb
@@ -1,3 +1,3 @@
-$('#competitors_from_db').html("<%= j render partial: 'competitors', object: @competitors_from_db %>");
+$('#competitors').html("<%= j render partial: 'competitors', object: @competitors %>");
 checkForHiddenDiv('event_men');
 checkForHiddenDiv('event_women');
