--- a/app/views/competitors/_form.html.erb
+++ b/app/views/competitors/_form.html.erb
@@ -1,13 +1,13 @@
 <div class="panel panel-primary">
-  <div class="panel-heading text-center"><strong>Add competitor</strong></div>
+  <div class="panel-heading text-center"><strong>Create competitor</strong></div>
   <div class="panel-body">
-    <%= form_for(competitor) do |f| %>
-      <% if competitor.errors.any? %>
+    <%= form_for(@competitor) do |f| %>
+      <% if @competitor.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(competitor.errors.count, "error") %> prohibited this competitor from being saved:</h2>
+          <h2><%= pluralize(@competitor.errors.count, "error") %> prohibited this competitor from being saved:</h2>
 
           <ul>
-          <% competitor.errors.full_messages.each do |message| %>
+          <% @competitor.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
           </ul>
@@ -25,30 +25,30 @@
           <%= f.text_field :surname, class: 'form-control' %>
         </div>
       </div>
-        
+
       <div class="row">
-        
+
         <div class="form-group col-sm-6">
           <%= f.label :birth_date %>
           <%= f.date_select :birth_date, {start_year: 1960, end_year: Date.today.year - 10}, {class: 'form-control'} %>
         </div>
-        
+
         <div class="form-group col-sm-6">
           <%= f.label :club %>
           <%= f.text_field :club, class: 'form-control' %>
         </div>
-        
+
         <div class="form-group col-sm-6">
           <%= f.label :sex, 'Male'  %>
           <%= f.radio_button :sex, 'M' %>
           <%= f.label :sex, "Female", :value => "false" %>
           <%= f.radio_button :sex, 'F' %>
         </div>
-        
+
       </div>
-      
-      <%= hidden_field_tag(:event_id, event_id) %>
-      <%= f.submit 'Add Competitor', class: "btn btn-primary", event_id: event_id %>
+
+      <%= hidden_field_tag(:event_id, params[:event_id]) %>
+      <%= f.submit 'Create Competitor', class: "btn btn-primary", event_id: params[:event_id] %>
 
     <% end %>
   </div>
